--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "app"
+name = "habit-tracker"
 version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
-license = ""
+description = "Habit tracker"
+authors = ["Memku"]
+license = "MIT"
 repository = ""
 edition = "2021"
 rust-version = "1.77.2"
