--- a/.github/workflows/build-android.yaml
+++ b/.github/workflows/build-android.yaml
@@ -54,7 +54,7 @@ jobs:
 
       # - name: Sign Android APK
       #   run: |
-      #     cd packages/client/src-tauri/gen/android
+      #     cd src-tauri/gen/android
       #     echo "keyAlias=${{ secrets.ANDROID_KEY_ALIAS }}" > keystore.properties
       #     echo "password=${{ secrets.ANDROID_KEY_PASSWORD }}" >> keystore.properties
       #     base64 -d <<< "${{ secrets.ANDROID_KEY_BASE64 }}" > $RUNNER_TEMP/keystore.jks
@@ -65,7 +65,7 @@ jobs:
 
       - name: Build app bundle
         run: |
-            VITE_BACKEND_URL="wss://fantasy.chylo.pl" npx tauri android build
+            npx tauri android build
         env:
           NDK_HOME: ${{ env.ANDROID_HOME }}/ndk/${{ env.NDK_VERSION }}
 
@@ -75,7 +75,7 @@ jobs:
 
       - name: Rename APK file
         run: |
-          mv ./packages/client/src-tauri/gen/android/app/build/outputs/apk/universal/release/app-universal-release.apk ./packages/client/src-tauri/gen/android/app/build/outputs/apk/universal/release/habit-tracker-${{ steps.package-version.outputs.current-version}}.apk
+          mv ./src-tauri/gen/android/app/build/outputs/apk/universal/release/app-universal-release.apk ./src-tauri/gen/android/app/build/outputs/apk/universal/release/habit-tracker-${{ steps.package-version.outputs.current-version}}.apk
 
       - name: Publish
         uses: softprops/action-gh-release@v2
@@ -85,4 +85,4 @@ jobs:
           tag_name: v${{ steps.package-version.outputs.current-version}}
           generate_release_notes: true
           files: |
-              ./packages/client/src-tauri/gen/android/app/build/outputs/apk/universal/release/habit-tracker-${{ steps.package-version.outputs.current-version}}.apk
+              ./src-tauri/gen/android/app/build/outputs/apk/universal/release/habit-tracker-${{ steps.package-version.outputs.current-version}}.apk
