feat: enable sign APK

--- a/.github/workflows/build-android.yaml
+++ b/.github/workflows/build-android.yaml
@@ -52,13 +52,13 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      # - name: Sign Android APK
-      #   run: |
-      #     cd src-tauri/gen/android
-      #     echo "keyAlias=${{ secrets.ANDROID_KEY_ALIAS }}" > keystore.properties
-      #     echo "password=${{ secrets.ANDROID_KEY_PASSWORD }}" >> keystore.properties
-      #     base64 -d <<< "${{ secrets.ANDROID_KEY_BASE64 }}" > $RUNNER_TEMP/keystore.jks
-      #     echo "storeFile=$RUNNER_TEMP/keystore.jks" >> keystore.properties
+      - name: Sign Android APK
+        run: |
+          cd src-tauri/gen/android
+          echo "keyAlias=${{ secrets.ANDROID_KEY_ALIAS }}" > keystore.properties
+          echo "password=${{ secrets.ANDROID_KEY_PASSWORD }}" >> keystore.properties
+          base64 -d <<< "${{ secrets.ANDROID_KEY_BASE64 }}" > $RUNNER_TEMP/keystore.jks
+          echo "storeFile=$RUNNER_TEMP/keystore.jks" >> keystore.properties
 
       - name: Build libs
         run: npm run build
